# src/controllers/userController.js
@@ -1,7 +1,6 @@
 const express = require('express');
 const router = express.Router();
 const userService = require('../services/userService');
-const authenticateToken = require('../middleware/auth');
 
 router.post('/register', async (req, res) => {
     try {
@@ -20,15 +19,6 @@ router.post('/login', async (req, res) =>{
         res.json({token});
     } catch (error) {
         res.status(400).json({ error: error.message});
-    }
-});
-
-router.get('/users', authenticateToken, async (req, res) =>{
-    try{
-        const users = await userService.getUsers();
-        res.json(users);
-    }catch (error){
-        res.status(400).json({error: error.message});
     }
 });
 
