# src/models/compra.js
@@ -1,23 +1,6 @@
 const { Sequelize, DataTypes} = require('sequelize');
 const sequelize = require('../config/database');
 
-const User = sequelize.define('Users', {
-    id: {
-        type: DataTypes.UUID,
-        defaultValue: Sequelize.UUIDV4,
-        primaryKey: true,
-        allowNull: false
-    },
-    username: {
-        type: DataTypes.STRING,
-        allowNull: false
-    },
-    password: {
-        type: DataTypes.STRING,
-        allowNull: false
-    }
-});
-
 const Compra = sequelize.define('Pedidos', {
     id: {
         type: DataTypes.UUID,
@@ -35,4 +18,4 @@ const Compra = sequelize.define('Pedidos', {
     }
 });
 
-module.exports = User, Compra;
+module.exports = Compra;
